welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type application is not allowed for postfix operators
    T=T+[getCouleurSol]
       ^Array1:7: error: identifier expected but integer literal found.
  } while (T[0]!=getCouleurSol)
             ^Array1:18: error: ']' expected but '}' found.
} 
^