welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T =Array[Int](getCouleurSol)
  do {
    avance()
    T=T+[getCouleurSol]
  } while (T[0]!=getCouleurSol)
  for (i<-0 to T.lenght-1){
    gauche()
    avance()
    droite()
    for (j<- 0 to T.lenght-1){
      baisseBrosse()
      setCouleurBrosse(T[j])
      avance()
    }
  }
}